ccjegyzet/extend/abstractInstance.txt
$ clang -lstdc++ -D FAILCOMPILATION abstract.cc
abstract.cc:63:16: error: variable type 'Stringifiable' is an abstract class
        Stringifiable s;
                      ^
abstract.cc:11:17: note: unimplemented pure virtual method 'stringify' in 'Stringifiable'
        virtual string stringify() const = 0;
                       ^
abstract.cc:65:6: error: allocating an object of abstract class type 'Stringifiable'
        new Stringifiable();
            ^
2 errors generated.
